--- a/BJJInParadise.Web/Views/Shared/_Layout.cshtml
+++ b/BJJInParadise.Web/Views/Shared/_Layout.cshtml
@@ -97,8 +97,8 @@
     <!-- Plugin JavaScript -->
     <script src="~/Scripts/jquery.easing.1.3.js"></script>
     <!-- Contact form JavaScript -->
-    <script src="~/Scripts/agency/jqBootstrapValidation.js"></script>
-    <script src="~/Scripts/agency/contact_me.js"></script>
+    <script src="~/Scripts/agency/jqBootstrapValidation.min.js"></script>
+    <script src="~/Scripts/agency/contact_me.min.js"></script>
     <!-- Custom scripts for this template -->
     <script src="~/Scripts/agency/agency.min.js"></script>
 
