--- a/BJJInParadise.Web/Views/Shared/_Layout.cshtml
+++ b/BJJInParadise.Web/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <title>@ViewBag.Title - BJJ in Paradise</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-  
+    @RenderSection("styles", required: false)
     <!-- Custom fonts for this template -->
     <link href="~/Content/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
