--- a/BJJInParadise.Web/Views/Home/Index.cshtml
+++ b/BJJInParadise.Web/Views/Home/Index.cshtml
@@ -38,6 +38,12 @@
                 <h3 class="section-subheading text-muted">The idea is simple. Show the beauty of Puerto Escondido to our friends and family in the world-wide BJJ community. Train and make friends through a shared passion for jiu jitsu. </h3>
             </div>
         </div>
+        <div class="row">
+          
+            <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/WvTq57o3-zo?rel=0" allowfullscreen></iframe>
+            </div>
+        </div>
         <div class="row text-center">
             <div class="col-md-4">
                 <span class="fa-stack fa-4x">
