--- a/BJJInParadise.Web/Views/Shared/_Layout.cshtml
+++ b/BJJInParadise.Web/Views/Shared/_Layout.cshtml
@@ -52,6 +52,9 @@
                             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
                         </li>
                         <li class="nav-item">
+                            @Html.ActionLink("Upcoming Camps", "Upcoming", "Camp", null, new { @class = "nav-link" })
+                        </li>
+                        <li class="nav-item">
                             @Html.ActionLink("Book Today", "Index", "Booking", null, new { @class = "nav-link" })
                         </li>
                     </ul>
