--- a/BJJInParadise.Web/Content/agency/agency.css
+++ b/BJJInParadise.Web/Content/agency/agency.css
@@ -176,7 +176,7 @@ img::-moz-selection {
 header.masthead {
     text-align: center;
     color: white;
-    background-image: url("../headerbjj.jpg");
+    background-image: url("../../Images/headerGroupSmile.jpg");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center center;
