--- a/BJJInParadise.Web/Views/Shared/_Layout.cshtml
+++ b/BJJInParadise.Web/Views/Shared/_Layout.cshtml
@@ -102,9 +102,21 @@
     <!-- Contact form JavaScript -->
     <script src="~/Scripts/agency/jqBootstrapValidation.min.js"></script>
     <script src="~/Scripts/agency/contact_me.min.js"></script>
-    <!-- Custom scripts for this template -->
-    <script src="~/Scripts/agency/agency.min.js"></script>
 
+<script>
+
+
+
+
+
+
+
+
+
+
+
+
+</script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
