--- a/BJJInParadise.Web/Views/Home/Index.cshtml
+++ b/BJJInParadise.Web/Views/Home/Index.cshtml
@@ -118,7 +118,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading text-uppercase">About</h2>
-                <h3 class="section-subheading text-muted">So, what's the deal?</h3>
+                <h3 class="section-subheading text-muted">A week in paradise is about more than just awesome BJJ training! We’ll take care of everything from the airport pick up, transport, tours, laundry and accommodation. Our next camp@(Model != null ?", " + Model.StartDate.ToLongDateString() + " includes:": " will include: ")  </h3>
             </div>
         </div>
         <div class="row">
@@ -157,7 +157,7 @@
                 <br />
                 <div class="row">
                     <div class="col-4">
-                        <img class="rounded img-samesize " src="~/Images/surf.jpg" alt="">
+                        <img class="rounded img-samesize rounded-circle" src="~/Images/surf.jpg" alt="">
 
                     </div>
 
@@ -193,7 +193,7 @@
 
                     </div>
                     <div class="col-6">
-                        <img class="rounded img-samesize fa-rotate-270" src="~/Images/caioandkroyler.JPG" alt="">
+                        <img class="rounded img-samesize rounded-circle" style="max-height: 75%; max-width: 75%;" src="~/Images/marciohelping.jpg" alt="">
 
                     </div>
 
@@ -205,7 +205,7 @@
                 <br />
                 <div class="row">
                     <div class="col-4">
-                        <img class="rounded img-samesize " src="~/Images/Manialtepec.png" alt="">
+                        <img class="rounded img-samesize rounded-circle" src="~/Images/Manialtepec.png" alt="">
                     </div>
                     <div class="col-8">
 
@@ -232,7 +232,7 @@
                     </div>
 
                     <div class="col-4">
-                        <img class="rounded img-samesize " src="~/Images/montate-a-la-aventura.jpg" alt="">
+                        <img class="rounded img-samesize rounded-circle" src="~/Images/montate-a-la-aventura.jpg" alt="">
                     </div>
 
 
