--- a/BJJInParadise.Web/Views/Home/Index.cshtml
+++ b/BJJInParadise.Web/Views/Home/Index.cshtml
@@ -44,6 +44,9 @@
                 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/WvTq57o3-zo?rel=0" allowfullscreen></iframe>
             </div>
         </div>
+        <br/>
+        <br/>
+
         <div class="row text-center">
             <div class="col-md-4">
                 <span class="fa-stack fa-4x">
@@ -105,6 +108,8 @@
 
 
         </div>
+        <br/>
+        <br/>
         <div class="offset-5">
             @Html.ActionLink("View More >>>", "Index", "Gallery", null, new { @class = "btn btn-info btn-xl text-uppercase " })
         </div>
@@ -259,16 +264,16 @@
         </div>
     </div>
 </section>
-<section class="bg-secondary" id="faq">
+<section class="bg-light" id="faq">
 
     <div class="container">
 
-        <h3 class="text-info">FAQ</h3>
+        <h3 class="">FAQ's</h3>
         <div class="row">
             <div id="accordion" class="container">
                 <div class="card">
                     <div class="card-header">
-                        <a class=" card-link text-info" data-toggle="collapse" href="#collapseTwo">
+                        <a class=" card-link" data-toggle="collapse" href="#collapseTwo">
                             Where is the camp?
 
 
@@ -457,7 +462,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading text-uppercase">Meet Brad and Adrian</h2>
-                <h3 class="section-subheading text-muted">MThe folks responsible for creating this amazing camp!</h3>
+                <h3 class="section-subheading text-muted">Meet your hosts</h3>
             </div>
         </div>
         <div class="row">
@@ -498,11 +503,7 @@
             </div>
 
         </div>
-        <div class="row">
-            <div class="col-lg-8 mx-auto text-center">
-                <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
-            </div>
-        </div>
+
     </div>
 </section>
 <!-- Clients -->
@@ -526,7 +527,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading text-uppercase">Contact Us</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+               
             </div>
         </div>
         <div class="row">
