--- a/BJJInParadise.Web/Views/Shared/_Layout.cshtml
+++ b/BJJInParadise.Web/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
                             <a class="nav-link js-scroll-trigger" href="#faq">FAQ</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link js-scroll-trigger" href="#team">Team</a>
+                            <a class="nav-link js-scroll-trigger" href="#team">Your Hosts</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -84,6 +84,9 @@
             </li>
             <li class="nav-item">
                 @Html.ActionLink("Manage Camps", "Index", "Camp", null, new { @class = "nav-link" })
+            </li>
+            <li class="nav-item">
+                @Html.ActionLink("Manage Users", "Index", "User", null, new { @class = "nav-link" })
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Link</a>
