--- a/BJJInParadise.Web/Views/Camp/Details.cshtml
+++ b/BJJInParadise.Web/Views/Camp/Details.cshtml
@@ -64,54 +64,16 @@
         </dd>
 
     </dl>
-</div>
-@foreach(var item in Model.)
-<h2>Booked Camps for @Model.FirstName + @Model.LastName</h2>
-<div class="col-xs-12 col-md-6">
-    <div id="accordion">
-        @foreach (var item in Model.BookedCamps)
-        {
+    @{ var count = 0;}
+    <h2>Booked Camps for @Model.CampName + @Model.StartDate.ToLongDateString()</h2>
+    @Html.Partial("../Booking/_BookingAccordian", @Model.Bookings)
 
-            <div class="card">
-                <div class="card-header" id="headingOne">
-
-                    <h5 class="mb-0">
-                        <button class="btn btn-link" data-toggle="collapse" data-target="#collapse@(count)" aria-expanded="true" aria-controls="collapse@(count)">
-                            @item.Camp.CampName
-                        </button>
-                    </h5>
-                </div>
-
-                <div id="collapse@(count)" class="collapse" aria-labelledby="heading + @(count)" data-parent="#accordion">
-                    <div class="card-body">
-                        
-                     
-                    
-                        <div class="col-xs-3">@Html.DisplayNameFor(x => item.AmountPaid): @Html.DisplayFor(x => item.AmountPaid)</div>
-                  
-                        <div class="col-xs-3">@Html.DisplayNameFor(x => item.Camp.StartDate): @Html.DisplayFor(x => item.Camp.StartDate)</div>
-    
-                        <div class="col-xs-3">@Html.DisplayNameFor(x => item.Camp.EndDate): @Html.DisplayFor(x => item.Camp.EndDate)</div>
-                        <div class="col-xs-3">@Html.DisplayNameFor(x => item.CreatedDate): @Html.DisplayFor(x => item.CreatedDate)</div>
-
-                        <div class="col-xs-3">@Html.DisplayNameFor(x => item.ModifiedDate): @Html.DisplayFor(x => item.ModifiedDate)</div>
-                  
-                        <div class="col-xs-3">@Html.DisplayNameFor(x => item.Camp.IsActive): @Html.DisplayFor(x => item.Camp.IsActive)</div>
-                    
-                
-                      
-                    </div>
-                </div>
-                @{ count++;}
-            </div>
-
-        }
-    </div>
-</div>
 <p>
 @if (User.IsInRole(UserConsts.ADMIN_ROLE))
 {
-    @Html.ActionLink("Edit", "Edit", new {id = Model.CampId}) 
+    @Html.ActionLink("Edit", "Edit", new {id = Model.CampId}, new { @class = "btn btn-warning" }) 
 }
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index",null, new { @class = "btn btn-success" })
+    
 </p>
+</div>
