--- a/BJJInParadise.Web/Views/Camp/Edit.cshtml
+++ b/BJJInParadise.Web/Views/Camp/Edit.cshtml
@@ -67,6 +67,6 @@
         }
 
         <div>
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Back to List", "Index", null, new {@class="btn btn-success"})
         </div>
     </div>
