--- a/BJJInParadise.Web/Views/User/Edit.cshtml
+++ b/BJJInParadise.Web/Views/User/Edit.cshtml
@@ -135,8 +135,7 @@
     }
 
     <div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>
+        @Html.ActionLink("Back to List", "Index", null, new{ @class="btn btn-success"})  </div>
 </div>
 
 @section Scripts {
