--- a/BJJInParadise.Web/Views/Camp/Delete.cshtml
+++ b/BJJInParadise.Web/Views/Camp/Delete.cshtml
@@ -1,66 +1,98 @@
-﻿@model BjjInParadise.Core.Models.Camp
+﻿@using BjjInParadise.Core.Constants
+@model BjjInParadise.Core.Models.Camp
+@section styles{
+    <style>
+        #mainNav {
+            background: #000 !important;
+        }
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Camp</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.CampName)
-        </dt>
+        #deleteCamp {
+            margin-top: 160px;
+        }
+    </style>
+}    @using (Html.BeginForm())
+     {
+         <div class="container" id="deleteCamp">
+             <h3>Are you sure you want to delete this?</h3>
+             <div>
+                 <h4>Camp</h4>
+                 <hr/>
+                 <div class="container" id="detailsCampsContainer">
+                     <h4>Camp</h4>
+                     <hr />
+                     <dl class="dl-horizontal">
+                         <dt>
+                             @Html.DisplayNameFor(model => model.CampName)
+                         </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.CampName)
-        </dd>
+                         <dd>
+                             @Html.DisplayFor(model => model.CampName)
+                         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.StartDate)
-        </dt>
+                         <dt>
+                             @Html.DisplayNameFor(model => model.StartDate)
+                         </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.StartDate)
-        </dd>
+                         <dd>
+                             @Html.DisplayFor(model => model.StartDate)
+                         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EndDate)
-        </dt>
+                         <dt>
+                             @Html.DisplayNameFor(model => model.EndDate)
+                         </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.EndDate)
-        </dd>
+                         <dd>
+                             @Html.DisplayFor(model => model.EndDate)
+                         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.IsActive)
-        </dt>
+                         <dt>
+                             @Html.DisplayNameFor(model => model.IsActive)
+                         </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.IsActive)
-        </dd>
+                         <dd>
+                             @Html.DisplayFor(model => model.IsActive)
+                         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedDate)
-        </dt>
+                         <dt>
+                             @Html.DisplayNameFor(model => model.CreatedDate)
+                         </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.CreatedDate)
-        </dd>
+                         <dd>
+                             @Html.DisplayFor(model => model.CreatedDate)
+                         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ModifiedDate)
-        </dt>
+                         <dt>
+                             @Html.DisplayNameFor(model => model.ModifiedDate)
+                         </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.ModifiedDate)
-        </dd>
+                         <dd>
+                             @Html.DisplayFor(model => model.ModifiedDate)
+                         </dd>
 
-    </dl>
+                     </dl>
+                     @{ var count = 0;}
+                     <h2>Booked Camps for @Model.CampName + @Model.StartDate.ToLongDateString()</h2>
+                     @Html.Partial("../Booking/_BookingAccordian", @Model.Bookings)
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-    @Html.HiddenFor(x => x.CampId)
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
-</div>
+                     <p>
+                         <div class="form-actions no-color">
+                             
+                             @Html.AntiForgeryToken()
+                             @Html.HiddenFor(x => x.CampId)
+                             <input type="submit" value="Delete" class="btn btn-danger"/> 
+                         </div>
+                         @if (User.IsInRole(UserConsts.ADMIN_ROLE))
+                         {
+                             @Html.ActionLink("Edit", "Edit", new {id = Model.CampId}, new {@class = "btn btn-warning"})
+                         }
+                         @Html.ActionLink("Back to List", "Index", null, new {@class = "btn btn-success"})
+                        
+                     </p>
+                 </div>
+
+             
+               
+                 
+             </div>
+         </div>
+     }
