--- a/BJJInParadise.Web/Views/Home/Index.cshtml
+++ b/BJJInParadise.Web/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
             <a class="btn btn-info btn-xl text-uppercase js-scroll-trigger" href="#what">Tell Me More</a>
             @if (Model != null)
             {
-                @Html.ActionLink("Book Today", "Index", "Booking", null, new { @class = "btn btn-primary btn-xl text-uppercase " })
+                @Html.ActionLink("Reserve My Spot", "Index", "Booking", null, new { @class = "btn btn-primary btn-xl text-uppercase " })
             }
         </div>
     </div>
@@ -34,7 +34,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading text-uppercase">Our Mission</h2>
-                <p class=" text-muted">Make friends and experience new peopke and places through a sharedd passion for Jiu Jitsu.</p>
+                <p class=" text-muted">Make friends and experience new people and places through a shared passion for Jiu Jitsu.</p>
                 <h3 class="section-subheading text-muted">The idea is simple. Show the beauty of Puerto Escondido to our friends and family in the world-wide BJJ community. Train and make friends through a shared passion for jiu jitsu. </h3>
             </div>
         </div>
