--- a/BJJInParadise.Web/Content/agency/agency.css
+++ b/BJJInParadise.Web/Content/agency/agency.css
@@ -617,7 +617,7 @@ header.masthead {
 
 section#contact {
     background-color: #212529;
-    background-image: url("../img/map-image.png");
+    background-image: url("../../Images/jojo-roper-puerto-escondido.jpg");
     background-repeat: no-repeat;
     background-position: center;
 }
