--- a/BJJInParadise.Web/Views/Home/Index.cshtml
+++ b/BJJInParadise.Web/Views/Home/Index.cshtml
@@ -32,50 +32,29 @@
 <section id="what">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 text-center">
+            <div class="col-xs-12 col-md-4">
+                <img src="~/Images/brad.WithOthers.jpg" class="img-samesize" />
+            </div>
+            <div class="col-md-4 col-lg-4 text-center">
                 <h2 class="section-heading text-uppercase">Our Mission</h2>
                 <p class=" text-muted">Make friends and experience new people and places through a shared passion for Jiu Jitsu.</p>
                 <h3 class="section-subheading text-muted">The idea is simple. Show the beauty of Puerto Escondido to our friends and family in the world-wide BJJ community. Train and make friends through a shared passion for jiu jitsu. </h3>
             </div>
+            <div class="col-xs-12 col-md-4">
+                <img src="~/Images/turtulesSunset.jpg" class="img-samesize" />
+            </div>
         </div>
+        <br/>
+        <br/>
         <div class="row">
 
             <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/WvTq57o3-zo?rel=0" allowfullscreen></iframe>
             </div>
         </div>
-        <br/>
-        <br/>
+     
 
-        <div class="row text-center">
-            <div class="col-md-4">
-                <span class="fa-stack fa-4x">
-                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fa fa-sun-o fa-stack-1x fa-inverse"></i>
-                </span>
-                <h4 class="service-heading">World Class Training in Paradise</h4>
-                <p class="text-muted">Several sessions per day, morning and late afternoon and evening with small group jiu jitsu instruction, lots of open mat time and plenty of one on one time with top-level black belts from around the world. Some of the notable instructors we have hosted include: Caio Terra, Magid Hage, Marcio Stambowsky, Kroyler Gracie and more.</p>
-            </div>
-            <div class="col-md-4">
-                <span class="fa-stack fa-4x">
-                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fa fa-tags fa-stack-1x fa-inverse"></i>
-                </span>
-                <h4 class="service-heading">Did I Read This Right?</h4>
-                <p class="text-muted">Yes you did! BJJ in Paradise is more than just a small group Brazilian Jiu-Jitsu camp; It's an all-inclusive jiu jitsu vacation with beautiful beaches, surfing, deluxe accommodation, great food, but most importantly, the chance to make new friends and discover new places through a shared love of the art of Brazilian Jiu-Jitsu. </p>
-            </div>
-            <div class="col-md-4">
-                <span class="fa-stack fa-4x">
-                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fa fa-cutlery fa-stack-1x fa-inverse"></i>
-                </span>
-                <h4 class="service-heading">Food</h4>
-                <p class="text-muted">
-                    A large part of living the jiu jitsu lifestyle is good healthy food to fuel your sessions on the mat. With this in mind, we will be offering the best food for breakfast and lunch every day of camp full of fresh fruits, juices and other high quality fresh food to keep our athletes and their families in top condition.
-                    For dinner, choose from dozens of delicious local places, vegetarian options, burgers, and much more within a short walk of the hotel, or eat in the award winning Hotel Santa Fe restaurant.
-                </p>
-            </div>
-        </div>
+        
     </div>
 </section>
 <!-- Portfolio Grid -->
@@ -126,6 +105,40 @@
                 <h3 class="section-subheading text-muted">A week in paradise is about more than just awesome BJJ training! We’ll take care of everything from the airport pick up, transport, tours, laundry and accommodation. Our next camp@(Model != null ?", " + Model.StartDate.ToLongDateString() + " includes:": " will include: ")  </h3>
             </div>
         </div>
+        <br/>
+        <br/>
+     
+            <div class="row text-center">
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-sun-o fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">World Class Training in Paradise</h4>
+                    <p class="text-muted">Several sessions per day, morning and late afternoon and evening with small group jiu jitsu instruction, lots of open mat time and plenty of one on one time with top-level black belts from around the world. Some of the notable instructors we have hosted include: Caio Terra, Magid Hage, Marcio Stambowsky, Kroyler Gracie and more.</p>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-tags fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Did I Read This Right?</h4>
+                    <p class="text-muted">Yes you did! BJJ in Paradise is more than just a small group Brazilian Jiu-Jitsu camp; It's an all-inclusive jiu jitsu vacation with beautiful beaches, surfing, deluxe accommodation, great food, but most importantly, the chance to make new friends and discover new places through a shared love of the art of Brazilian Jiu-Jitsu. </p>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-cutlery fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Food</h4>
+                    <p class="text-muted">
+                        A large part of living the jiu jitsu lifestyle is good healthy food to fuel your sessions on the mat. With this in mind, we will be offering the best food for breakfast and lunch every day of camp full of fresh fruits, juices and other high quality fresh food to keep our athletes and their families in top condition.
+                        For dinner, choose from dozens of delicious local places, vegetarian options, burgers, and much more within a short walk of the hotel, or eat in the award winning Hotel Santa Fe restaurant.
+                    </p>
+                </div>
+            </div>
+        <br/>
+        <br/>
         <div class="row">
             <div class="col-lg-12">
                 <div class="row">
@@ -267,16 +280,26 @@
 <section class="bg-light" id="faq">
 
     <div class="container">
-
-        <h3 class="">FAQ's</h3>
+        <div class="row">
+            <div class="col-xs-12 col-md-4">
+                <img src="~/Images/triangleChallenge.jpg" class="img-samesize fa-rotate-270" />
+            </div>
+            <div class="col-xs-12 col-md-4 text-center">
+                <h3 class="">FAQ's</h3>
+            </div>
+            <div class="col-xs-12 col-md-4">
+                <img src="~/Images/claude.jpg" class="img-samesize" />
+            </div>
+          
+        </div>
+        <br/>
+        <br/>
         <div class="row">
             <div id="accordion" class="container">
                 <div class="card">
                     <div class="card-header">
                         <a class=" card-link" data-toggle="collapse" href="#collapseTwo">
                             Where is the camp?
-
-
                         </a>
                     </div>
                     <div id="collapseTwo" class="collapse show" data-parent="#accordion">
@@ -288,7 +311,7 @@
 
                 <div class="card">
                     <div class="card-header">
-                        <a class="collapsed card-link text-info" data-toggle="collapse" href="#collapseOne">
+                        <a class="collapsed card-link" data-toggle="collapse" href="#collapseOne">
                             How do I get to camp?
                         </a>
                     </div>
@@ -302,7 +325,7 @@
 
                 <div class="card">
                     <div class="card-header">
-                        <a class="collapsed card-link text-info" data-toggle="collapse" href="#collapseThree">
+                        <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
                             Is it safe?
                         </a>
                     </div>
@@ -315,7 +338,7 @@
 
                 <div class="card">
                     <div class="card-header">
-                        <a class="collapsed card-link text-info" data-toggle="collapse" href="#collapseFour">
+                        <a class="collapsed card-link" data-toggle="collapse" href="#collapseFour">
                             What day do I need to arrive / leave?
                         </a>
                     </div>
@@ -328,7 +351,7 @@
 
                 <div class="card">
                     <div class="card-header">
-                        <a class="collapsed card-link text-info" data-toggle="collapse" href="#collapseFive">
+                        <a class="collapsed card-link" data-toggle="collapse" href="#collapseFive">
                             I’m a complete beginner, can I still join?
                         </a>
                     </div>
@@ -340,7 +363,7 @@
                 </div>
                 <div class="card">
                     <div class="card-header">
-                        <a class="collapsed card-link text-info" data-toggle="collapse" href="#collapseSix">
+                        <a class="collapsed card-link" data-toggle="collapse" href="#collapseSix">
                             What language will the classes be taught in?
                         </a>
                     </div>
@@ -353,7 +376,7 @@
                 </div>
                 <div class="card">
                     <div class="card-header">
-                        <a class="collapsed card-link text-info" data-toggle="collapse" href="#collapseSeven">
+                        <a class="collapsed card-link" data-toggle="collapse" href="#collapseSeven">
                             Is it possible to do private lessons with the instructors?
                         </a>
                     </div>
@@ -367,7 +390,7 @@
 
                 <div class="card">
                     <div class="card-header">
-                        <a class="collapsed card-link text-info" data-toggle="collapse" href="#collapseEight">
+                        <a class="collapsed card-link" data-toggle="collapse" href="#collapseEight">
                             Is this just a BJJ camp?
                         </a>
                     </div>
@@ -382,7 +405,7 @@
 
                 <div class="card">
                     <div class="card-header">
-                        <a class="collapsed card-link text-info" data-toggle="collapse" href="#collapseNine">
+                        <a class="collapsed card-link" data-toggle="collapse" href="#collapseNine">
                             Do you have gym facilities?
                         </a>
                     </div>
@@ -397,7 +420,7 @@
 
                 <div class="card">
                     <div class="card-header">
-                        <a class="collapsed card-link text-info" data-toggle="collapse" href="#collapseTen">
+                        <a class="collapsed card-link" data-toggle="collapse" href="#collapseTen">
                             When will there be training?
                         </a>
                     </div>
@@ -411,7 +434,7 @@
 
                 <div class="card">
                     <div class="card-header">
-                        <a class="collapsed card-link text-info" data-toggle="collapse" href="#collapseEleven">
+                        <a class="collapsed card-link" data-toggle="collapse" href="#collapseEleven">
                             Will I be allowed to film during the camp?
                         </a>
                     </div>
@@ -424,7 +447,7 @@
 
                 <div class="card">
                     <div class="card-header">
-                        <a class="collapsed card-link text-info" data-toggle="collapse" href="#collapseTwelve">
+                        <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwelve">
                             Other Questions
                         </a>
                     </div>
@@ -534,7 +557,7 @@
             <div class="col-lg-12">
                 <form id="contactForm" name="sentMessage" novalidate="novalidate">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-8">
                             <div class="form-group">
                                 <input class="form-control" id="name" type="text" placeholder="Your Name *" required="required" data-validation-required-message="Please enter your name.">
                                 <p class="help-block text-danger"></p>
@@ -548,7 +571,7 @@
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                             <div class="form-group">
                                 <textarea class="form-control" id="message" placeholder="Your Message *" required="required" data-validation-required-message="Please enter a message."></textarea>
                                 <p class="help-block text-danger"></p>
@@ -563,33 +586,29 @@
                 </form>
             </div>
         </div>
+        
+        <div class="row">
+            <div class="col-md-4">
+                <ul class="list-inline social-buttons">
+                    <li class="list-inline-item">
+                        <a href="//www.facebook.com/bjjinparadise/">
+                            <i class="fa fa-facebook"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 </section>
 <!-- Footer -->
 <footer>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-md-4">
-                <span class="copyright">Copyright &copy; Your Website 2018</span>
+                <span class="copyright">Copyright &copy; BJJ In Paradise @DateTime.Now.Year</span>
             </div>
             <div class="col-md-4">
-                <ul class="list-inline social-buttons">
-                    <li class="list-inline-item">
-                        <a href="#">
-                            <i class="fa fa-twitter"></i>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#">
-                            <i class="fa fa-facebook"></i>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#">
-                            <i class="fa fa-linkedin"></i>
-                        </a>
-                    </li>
-                </ul>
+              
             </div>
             <div class="col-md-4">
                 <ul class="list-inline quicklinks">
