--- a/BJJInParadise.Web/Views/Shared/_Layout.cshtml
+++ b/BJJInParadise.Web/Views/Shared/_Layout.cshtml
@@ -26,7 +26,15 @@
     <div id="page-top">
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top">BJJ In Paradise</a>
+                @{
+                    
+                    string logoHref = Url.Action("Index", "Home");
+                    if (Request.Url.AbsoluteUri.Contains("/Home/Index"))
+                    {
+                        logoHref = "#page-top";
+                    }
+                }
+                <a class="navbar-brand js-scroll-trigger" href="@logoHref">BJJ In Paradise</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fa fa-bars"></i>
@@ -37,7 +45,7 @@
                             <a class="nav-link js-scroll-trigger" href="#what">Mission</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+                            <a class="nav-link js-scroll-trigger" href="#portfolio">Media</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link js-scroll-trigger" href="#about">About</a>
@@ -48,12 +56,12 @@
                         <li class="nav-item">
                             <a class="nav-link js-scroll-trigger" href="#team">Your Hosts</a>
                         </li>
-                      
+
                         <li class="nav-item">
-                            @Html.ActionLink("Upcoming Camps", "Upcoming", "Camp", null, new { @class = "nav-link" })
+                            @Html.ActionLink("Upcoming Camps", "Upcoming", "Camp", null, new {@class = "nav-link"})
                         </li>
                         <li class="nav-item">
-                            @Html.ActionLink("Reserve My Spot", "Index", "Booking", null, new { @class = "nav-link" })
+                            @Html.ActionLink("Reserve My Spot", "Index", "Booking", null, new {@class = "nav-link"})
                         </li>
                         <li class="nav-item">
                             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
