--- a/BJJInParadise.Web/Views/Camp/Upcoming.cshtml
+++ b/BJJInParadise.Web/Views/Camp/Upcoming.cshtml
@@ -1,40 +1,55 @@
 ﻿@model IEnumerable<BjjInParadise.Core.Models.Camp>
 
+@section styles{
+    <style>
+        #mainNav {
+            background: #000 !important;
+        }
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.CampName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.StartDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.EndDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IsActive)
-        </th>
- 
-      
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.CampName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.StartDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EndDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IsActive)
-        </td>
-        
-    </tr>
+        #campsContainer {
+            margin-top: 160px;
+        }
+    </style>
 }
 
-</table>
+
+<div class="container" id="campsContainer">
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.CampName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.StartDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.EndDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.IsActive)
+            </th>
+
+
+        </tr>
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CampName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.StartDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EndDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.IsActive)
+                </td>
+
+            </tr>
+        }
+
+    </table>
+    </div>
